infra/argocd/argocd.ingress.yaml
mengtongun.commengtongun.com---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress-https
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.lechaterrant.com`)
      services:
        - kind: Service
          name: argocd-server
          port: 80
  tls:
    secretName: tls-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress-http
  namespace: argocd
  labels:
    lechaterrant.com/app: argocd
    lechaterrant.com/stack: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.lechaterrant.com`)
      services:
        - kind: Service
          name: argocd-server
          port: 80
          namespace: argocd
      middlewares:
        - name: https-redirect
          namespace: default
